--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -31,9 +31,16 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   position: fixed;
   z-index: 50;
 }
+.custominputresult {
+  border:none!important;
+  cursor: pointer;
+  margin: 0!important;
+  padding: 10px 0!important;
+  color: #000!important;
+}
 .popupcustom select, .popupcustom input, .popupcustom button {
   width: 100%;
-  border: 1px solid #999!important;
+  border: 1px solid #999;
   padding: 20px 15px;
   margin: 5px 0;
   color: #ac7b02;
